
                CHANGES IN party VERSION 0.9-9998 (2010-08-23)

    o    allow for internal permutations in predict via R_predict2


                CHANGES IN party VERSION 0.9-9997 (2010-07-06)

    o    update mvt.f (see mvtnorm)


                CHANGES IN party VERSION 0.9-9996 (2010-06-24)

    o    print progress bar while forest grows (via trace = TRUE
         in cforest_control())


                CHANGES IN party VERSION 0.9-9995 (2010-05-19)

    o    assignment of observations based on surrogate splits
         during fitting might have failed; observations went
         with majority (in a sub-optimal way)


                CHANGES IN party VERSION 0.9-9994 (2010-04-14)

    o    varimp() gives warning for non-unity weights

    o    "no admissible split found" warnings disabled


                CHANGES IN party VERSION 0.9-9993 (2010-03-04)

    o    just internals needed for mboost


                CHANGES IN party VERSION 0.9-9992 (2010-02-26)

    o    Bug fix in mob plotting for anova models


                CHANGES IN party VERSION 0.9-9991 (2010-01-27)

    o    Bug fix in error handling of mob().

                CHANGES IN party VERSION 0.9-999 (2009-09-24)

    o    minbucket was erronously interpreted as minbucket + 1

    o    p-values for teststat = "max" were wrong
         in the uncommon case of zero variances


                CHANGES IN party VERSION 0.9-998 (2009-06-17)

    o    mtry may vary with tree depth

    o    finding surrogate variables may have failed, fixed.


                CHANGES IN party VERSION 0.9-997 (2009-06-04)

    o    documentation fixes


                CHANGES IN party VERSION 0.9-996 (2009-03-27)

    o    survival fixes


                CHANGES IN party VERSION 0.9-994 (2009-02-10)

    o    fix bug in new varimp function (which was triggered
         by splits in categorical variables)


                CHANGES IN party VERSION 0.9-993 (2009-01-29)

    o    new C-level function R_remove_weights